src/components/elements/TodosList/TodosList.scss
.container {
  display: flex;
  width: 100%;
  justify-content: space-around;
  position: relative;
  margin-top: 2rem;

  .todos {
    --translate-y: 0px;

    width: 48%;
    height: 32vh;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    padding: 2rem 1rem;
    border-radius: rem(32px);
    overflow-y: scroll;
    position: relative;

    &::-webkit-scrollbar {
      background-color: transparent;
      width: 6.4px;
    }

    &::-webkit-scrollbar-thumb {
      background-color: transparentize($color-bg, 0.48);
      border-radius: rem(32px);
    }

    &__heading {
      position: sticky;
      top: -1vh;
      display: block;
      width: 100%;
      font-weight: 800;
      text-align: center;
      font-family: $pacifico;
      font-size: $ft-s-large;
      z-index: 99;

      &::after {
        content: '';
        display: block;
        position: absolute;
        top: 50%;
        left: 0;
        width: 100%;
        height: 8vh;
        background-color: $color-pastel-pink;
        z-index: -1;
        transform: translateY(-50%);
      }

      &::before {
        pointer-events: none;
        content: '';
        position: absolute;
        width: 100%;
        height: 4vh;
        top: 100%;
        left: 0;
        display: block;
        background-color: $color-pastel-pink;
        background: linear-gradient(
          to top,
          rgba(255, 255, 255, 0) 0%,
          $color-pastel-pink 100%
        );
        z-index: -2;
      }
    }

    background-color: $color-pastel-pink;
    color: $color-bg;

    .overflow {
      pointer-events: none;
      position: absolute;
      width: 100%;
      height: 16vh;
      bottom: 0;
      left: 0;
      display: block;
      background-color: $color-pastel-pink;
      background: linear-gradient(
        180deg,
        rgba(255, 255, 255, 0) 0%,
        $color-pastel-pink 100%
      );
      transform: translateY(var(--translate-y));
    }

    &.remove {
      background-color: $color-pastel-blue;

      .todos__heading {
        &::after {
          background-color: $color-pastel-blue;
        }
        &::before {
          background-color: $color-pastel-blue;
          background: linear-gradient(
            180deg,
            rgba(255, 255, 255, 0) 0%,
            $color-pastel-blue 100%
          );
        }
      }

      .overflow {
        background-color: $color-pastel-blue;
        background: linear-gradient(
          180deg,
          rgba(255, 255, 255, 0) 0%,
          $color-pastel-blue 100%
        );
      }

      .todos-list .todo-card {
        background-color: $color-bg-blue;
        color: $color-text-secondary;

        &__text::after {
          background-color: $color-pastel-blue;
        }
      }
    }
  }

  .todos-list {
    display: flex;
    justify-content: space-evenly;
    flex-direction: column;
    flex-wrap: wrap;
    width: 90%;
    margin-top: 2rem;

    .todo-card {
      background-color: $color-bg-pink;
      color: $color-text;

      &__text::after {
        background-color: $color-pastel-pink;
      }
    }
  }

  .spine {
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 100%;
    padding: 1rem 0;
    pointer-events: none;

    span {
      display: block;
      width: rem(48px);
      height: rem(16px);
      background-color: $color-bg;
      border-radius: rem(32px);
    }
  }

  @media #{$mq-mobile} {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100vw;
    overflow: hidden;

    .todos {
      width: 90%;

      &:last-child {
        margin-top: 1rem;
      }
    }

    .spine {
      flex-direction: row;
      width: 80%;

      span {
        transform: rotate(90deg);
      }
    }
  }
}

